--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <h2>List of Assignments</h2>
     <ul>
-        <li>Assignment 1</li>
+        <li><a href="./A1/index.html">Assignment 1.1 & 1.2</a></li>
         <li>Assignment 2</li>
         <li>Assignment 3</li>
     </ul>
