--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="./d3e1/D3.E1 CSS Selectors.html">Day 3 Exercise 1</a></li>
         <li><a href="./D6.E1 CSS Positions/D6.E1 CSS Positions.html">Day 6 Exercise 1</a></li>
         <li><a href="./d8e1/index.html">Day 8 Exercise 1</a></li>
+        <li><a href="./d9e1/index.html">Day 9 Exercise 1</a></li>
 
     </ul>
     <br>
