--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="./D6.E1 CSS Positions/D6.E1 CSS Positions.html">Day 6 Exercise 1</a></li>
         <li><a href="./d8e1/index.html">Day 8 Exercise 1</a></li>
         <li><a href="./d9e1/index.html">Day 9 Exercise 1</a></li>
+        <li><a href="./D10.E1 CSS Flexbox & Media Queries/D10.E1 CSS Flexbox & Media Queries.html">Day 10 Exercise 1</a></li>
 
     </ul>
     <br>
