--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>List of Assignments</h2>
     <ul>
         <li><a href="./A1/index.html">Assignment 1.1 & 1.2</a></li>
-        <li>Assignment 2</li>
+        <li><a href="./A2/index.html">Assignment 2</a></li>
         <li>Assignment 3</li>
     </ul>
     
