--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./d9e1/index.html">Day 9 Exercise 1</a></li>
         <li><a href="./D10.E1 CSS Flexbox & Media Queries/D10.E1 CSS Flexbox & Media Queries.html">Day 10 Exercise 1</a></li>
         <li><a href="./D11.E1 CSS Grid/D11.E1 CSS Grid.html">Day 11 Exercise 1</a></li>
+        <li><a href="./d15e1/">Day 15 Exercise 1</a></li>
 
     </ul>
     <br>
