--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="./D11.E1 CSS Grid/D11.E1 CSS Grid.html">Day 11 Exercise 1</a></li>
         <li><a href="./d15e1/index.html">Day 15 Exercise 1</a></li>
         <li><a href="./d15e2/index.html">Day 15 Exercise 2</a></li>
+        <li><a href="./d15e3/index.html">Day 15 Exercise 3</a></li>
 
     </ul>
     <br>
