--- a/A1/index.html
+++ b/A1/index.html
@@ -34,7 +34,7 @@
     <main>
         <section id="website1">
             <div>
-                <h2>Website 1: Luke and Nick</h2>
+                <h2><a href="https://lukeandnik.co.uk/">Website 1: Luke and Nick</a></h2>
                 <h2>Home Page</h2>
                 <p class="captions">This is the website of an artist duo (Luke & Nick) who are working with photography
                     and motion image</p>
@@ -46,7 +46,7 @@
                     symmetrical nor is the size. The navigation is a very minimalist design with only three buttons and
                     very
                     simple animations when interacted with like transition from bold to light.</p>
-                <div id="test">
+                <div class="container">
                     <figure>
                     <img id="phone1" class="images" src="assets/images/w1h1Phone.png">
                     <figcaption>Phone</figcaption>
@@ -78,7 +78,7 @@
                     really well. The text becomes lighter
                     when you hover over it
                     indicating that it has been selected.</p>
-                <div id="test">
+                <div class="container">
                     <figure>
                     <img id="phone1" class="images" src="assets/images/w1pg1Phone.png">
                     <figcaption>Phone</figcaption>
@@ -106,7 +106,7 @@
                     that it is
                     very far away and feel like it would have been better to just place an X symbol instead of “Close”.
                 </p>
-                <div id="test">
+                <div class="container">
                     <figure>
                     <img id="phone1" class="images" src="assets/images/w1pg2Phone.png">
                     <figcaption>Phone</figcaption>
@@ -129,7 +129,7 @@
         </section>
         <section id="website2">
             <div>
-                <h2>Website 2: Youtube</h2>
+                <h2><a href="https://www.youtube.com/">Website 2: Youtube</a></h2>
                 <h2>Home Page</h2>
                 <p class="captions">Youtube is one of the most popular free video sharing
                     websites which make it easier to watch videos online.</p>
@@ -140,7 +140,7 @@
                     and well aligned. The visual hierarchy is well presented, giving the most information, that is the 
                     videos the spotlight. The placement of all the buttons and CTAs are well done and very simple to 
                     understand.</p>
-                <div id="test">
+                <div class="container">
                     <figure>
                     <img id="phone1" class="images" src="assets/images/yt home phone.png">
                     <figcaption>Phone</figcaption>
@@ -170,7 +170,7 @@
                     very clean and simple. The important text is highlighted and indicated very well and the font which is 
                     Roboto is also easy to understand and aesthetically pleasing. The layout of YouTube is well planned 
                     out and it follows a multiple column grid.</p>
-                <div id="test">
+                <div class="container">
                     <figure>
                     <img id="phone1" class="images" src="assets/images/yt page1 phone.png">
                     <figcaption>Phone</figcaption>
@@ -196,7 +196,7 @@
                     clean and simple icons and provide a lot of options as well and it has places in a way 
                     where it does not seem like too many options either.
                 </p>
-                <div>
+                <div class="container">
                     <figure>
                     <img id="phone1"class="images" src="assets/images/yt page2 phone.png">
                     <figcaption>Phone</figcaption>
