--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li><a href="./d15e1/index.html">Day 15 Exercise 1</a></li>
         <li><a href="./d15e2/index.html">Day 15 Exercise 2</a></li>
         <li><a href="./d15e3/index.html">Day 15 Exercise 3</a></li>
+        <li>Day 16 Exercise 1 (File too big.)</li>
+        <li><a href="./d16e2/index.html">Day 16 Exercise 2</a></li>
 
     </ul>
     <br>
