--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./d15e3/index.html">Day 15 Exercise 3</a></li>
         <li>Day 16 Exercise 1 (File too big.)</li>
         <li><a href="./d16e2/index.html">Day 16 Exercise 2</a></li>
+        <li><a href="./d17e1/index.html">Day 17 Exercise 1</a></li>
 
     </ul>
     <br>
