--- a/d17e1/index.html
+++ b/d17e1/index.html
@@ -26,12 +26,17 @@
     <!--JavaScript -->
     <script type="text/javascript" src="assets/script.js" defer></script>
 
+    <script type="text/javascript" src="assets/script2.js" defer></script>
+
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/favicon.ico">
 
     <link rel="stylesheet" href="./assets/swiper-bundle.css" />
     <!-- CSS -->
-    <link href="assets/style.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
@@ -40,6 +45,8 @@
     <script src="./assets/swiper-bundle.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Draggable.min.js"></script>
+
+    <link href="assets/style.css" rel="stylesheet" type="text/css">
 
 
 
@@ -81,7 +88,7 @@
 
         <!-- If we need scrollbar -->
 
-    </div> 
+    </div>
 
     <br><br><br>
 
@@ -152,10 +159,10 @@
 
 
 
-  
 
 
-    
+
+
 </body>
 
 </html>
