--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul>
         <li><a href="./A1/index.html">Assignment 1.1 & 1.2</a></li>
         <li><a href="./A2/index.html">Assignment 2</a></li>
-        <li>Assignment 3</li>
+        <li><a href="./A3/index.html">Assignment 3</a></li>
     </ul>
     
 </body>
