--- a/A3/index.html
+++ b/A3/index.html
@@ -39,7 +39,7 @@
 <body>
 
     <div id="header">
-    <h1 id="title">A Hypertext Narrative Story</h1>
+    <h1 id="title">A Hypertext Narrative Story by Wazim Mohammed</h1>
     </div>
     <br>
     <br>
